fixing project title alignment

--- a/src/static/styles/desktop_styles.css
+++ b/src/static/styles/desktop_styles.css
@@ -399,7 +399,7 @@
 
   .project-description-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .work-badge {
